unpackaged/main/default/objects/bt_stripe__Checkout_Submission__c/fields/conference360__Event__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will be set in the Payments package if a checkout submission is for an Event. This will allow us to create the Attendees in the Events package and do any necessary validations.</inlineHelpText>
    <label>Event</label>
    <referenceTo>conference360__Event__c</referenceTo>
    <relationshipLabel>Checkout Submissions</relationshipLabel>
    <relationshipName>Checkout_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>